# proxima

./: .dockerignore  .gitignore  .gitmodules  Architecture.tex  Dockerfile  Proxima.bib  README.md  Requirements.tex  requirements.sty  speauth.cls  utils.sty
data/: .procmailrc  2000Install.txt  95install.txt  98install.txt  Downloads.lnk  Edit1  NTInstall.txt  desktop.ini  dial-up.txt  fromPalm.dba  tmfweb.html
dazzle-editor/: Document.xml  Makefile  dazzle-editor.cabal
dazzleEditor/: .gitignore  .project  DocumentAll.xml  DocumentSmall.xml  Document_Screenshots.xml  Heliumfile.hs  Makefile  Proxima.cabal  Setup.lhs  Shortcut to DazzleEditor.exe.lnk  output.txt  rigidproblem.hs  start.bat
dazzleEditor/src/: DocTypes_Generated.hs  DocUtils_Generated.hs  DocumentEdit_Generated.hs  DocumentType.hs  DocumentType.prx  Evaluator.hs  Main.hs  PresentationAG.ag  PresentationAG_Generated.ag  ProxParser.hs  ProxParser_Generated.hs  Reducer.hs  Scanner.hs  ScannerSheet.hs  ScannerSheet.x  Settings.hs
declarationForm/: .gitignore  .project  DeclDocument.xml  Document.xml  Makefile  (+4 more)
generator/: DocTypes_Generated.hs  GenCommon.hs  GenEditable.hs  GenProxParser.hs  Generator.cabal  Generator.sln
generator/branches/phi/: Generator.cabal  Generator.sln
generator/branches/phi/src/: Gen_DocTypes.hs  Gen_DocUtils.hs  Gen_DocumentEdit.hs  Gen_Phi.hs  Gen_PresentationAG.hs  Gen_ProxParser.hs  Main.hs  Parser.hs  TypesUtils.hs
generator/src/: GenAG.hi  GenAG.hs  GenCommon.hi  GenCommon.hs  GenDocUtils.hi  GenDocUtils.hs  GenEditable.hi  GenEditable.hs  GenParser.hi  GenParser.hs  GenProxParser.hi  GenProxParser.hs  GenTypes.hi  GenTypes.hs  Gen_DocTypes.hs  Gen_DocUtils.hs  Gen_DocumentEdit.hs  Gen_PresentationAG.hs  Gen_ProxParser.hs  Main.hi  Main.hs  Parser.hs  Types.hs  TypesUtils.hs
generator/trunk/: Generator.cabal
generator/trunk/src/: Gen_DocUtils.hs  Gen_DocumentEdit.hs  Gen_PresentationAG.hs  Gen_ProxParser.hs  Main.hs  Parser.hs  TypesUtils.hs
heliumEditor/: .gitignore  .project  Heliumfile.hs  HeliumfileAll.hs  Makefile  Proxima.cabal  Proxima.cabal'  Proxima.sln  Setup.lhs  Shortcut to Proxima.exe.lnk  doc.xml  ghcmake.bat  makeProxima.bat  screenshot.xml  smalldoc.xml  startghci.bat
heliumEditor/lvm/: Prelude.lvm
heliumEditor/src/: Chess.hs  CompileHelium.hs  DocTypes_Generated.hs  DocUtils_Generated.hs  DocumentEdit_Generated.hs  DocumentType.hs  DocumentType.prx  EvaluateInv.lhs  EvaluateTypes.hs  EvaluateTypesStubs.hs  Evaluator.hs  GetPut.lhs  InvPresentation.ag  LambdaReduce.ag  Main.hs  PresentationAG.ag  PresentationAG.hs  PresentationAG_Generated.ag  ProxParser.hs  ProxParser_Generated.hs  Reducer.hs  Scanner.hs  ScannerSheet.hs  ScannerSheet.x  ScannerSheetOld.hs  Settings.hs
minimalEditor/: .gitignore  Makefile  Proxima.cabal  Proxima.sln  Setup.lhs  unix2dosAll.bat
minimalEditor/src/: .gitignore  DocTypes_Generated.hs  DocUtils_Generated.hs  DocumentEdit_Generated.hs  DocumentType.hs  DocumentType.prx  Evaluator.hs  Main.hs  PresentationAG.ag  PresentationAG.hs  PresentationAG_Generated.ag  ProxParser.hs  ProxParser_Generated.hs  Reducer.hs  Scanner.hs  ScannerSheet.hs  ScannerSheet.x  Settings.hs
papers/Haskell 2008/Haskell/: .gitignore  Test.cabal  Test.sln
papers/Haskell 2008/Haskell/src/: .gitignore  AutoLiftCombine.hs  DPP.hs  DPPClass_Lib.hs  DPPMonad_Lib.hs  DPP_Lib.hs  DPP_Main.hs  Derivation.hs  DerivationNilStep.hs  Explicit.hs  Layers.hs  Magic.hs  MagicMonad.hs  Main.hs  NCP.hs  Typecheckloop.hs
papers/Haskell 2008/Haskell/src/typeFams/: Main.hs
proxima/branches/phi/: Proxima.cabal  Proxima.sln  Setup.lhs
proxima/branches/phi/doc/: Makefile  Manual.tex
proxima/branches/phi/doc/ModuleMap_files/: filelist.xml  slide0001.htm  slide0001.xml
proxima/branches/phi/scripts/: make  modmapToSlash  sedToSlash
proxima/branches/phi/src/: Makefile
proxima/branches/phi/src/Arrangement/: ArrLayerTypes.hs  ArrPresent.hs  ArrTranslate.hs  ArrTypes.hs  ArrUtils.hs  Arranger.hs  make.bat
proxima/branches/phi/src/Common/: CommonTypes.hs  CommonUtils.hs  DebugLevels.hs
proxima/branches/phi/src/Evaluation/: DocTypes.hs  DocumentEdit.hs  EnrUtils.hs  EvalLayerUtils.hs  EvalPresent.hs  EvalTranslate.hs
proxima/branches/phi/src/Layout/: AlexTemplate-ghc  LayLayerTypes.hs  LayPresent.hs  LayTranslate.hs  LayTypes.hs  LayUtils.hs  Layout.hs  ScanLib.hs  Scanner.hs
proxima/branches/phi/src/Presentation/: PresLayerTypes.hs  PresLayerUtils.hs  PresPresent.hs  PresTranslate.hs  PresTypes.hs  PresUtils.hs  XLatex.hs  XprezLib.hs
proxima/branches/phi/src/Proxima/: Architecture.hs  ArchitectureLib.hs  GUI.hs  Proxima.hs  TestMonadicLib.hs  Wrap.hs
proxima/branches/phi/src/Rendering/: RenLayerTypes.hs  RenLayerUtils.hs  RenPresent.hs  RenTranslate.hs  Renderer.hs
uuagc/: Makefile.in  README  configure  configure.in  mkinstalldirs
uuagc/regress/: Makefile  detectcircclassdecl.ag  detectcircclassdecl.exp  either.ag  either.exp  fake-deps.ag  fake-deps.exp  firstlast.ag  firstlast.exp  fixpoint.ag  fixpoint.exp  full-example-htmlgen.ag  full-example-htmlgen.exp  ho-poly.ag  ho-poly.exp  inh-syn-syntax.ag  irrefutable.ag  irrefutable.exp  map.ag  map.exp  poly-visit-type.ag  repmin.ag  repmin.exp  self-poly.ag  self-poly.exp  traces.ag  traces.exp  tyvar.ag  tyvar.exp  uniques.ag  uniques.exp  visits-poly.ag  visits-poly.exp
uuagc/scripts/: mkAGdepend.sh.in
uuagc/src/: ATermAbstractSyntax.hs  ATermWrite.hs  Ag.hs  CommonTypes.hs  DepTypes.hs  GrammarInfo.hs  HsTokenScanner.hs  Options.hs  PPUtil.hs  Parser.hs  Pretty.hs  Scanner.hs  SequentialComputation.lhs  SequentialTypes.hs  Streaming.hs  TokenDef.hs  Version.hs  Version.hs.in
uuagc/src-derived/: AbstractSyntax.hs  AbstractSyntaxDump.hs  Code.hs  CodeSyntax.hs  CodeSyntaxDump.hs  ConcreteSyntax.hs  DeclBlocks.hs  DefaultRules.hs  Desugar.hs  ErrorMessages.hs  Expression.hs  GenerateCode.hs  HsToken.hs  Interfaces.hs  InterfacesRules.hs  Order.hs  Patterns.hs  PrintCode.hs  PrintErrorMessages.hs  SemHsTokens.hs  TfmToVisage.hs  Transform.hs  Visage.hs  VisagePatterns.hs  VisageSyntax.hs
(+833 files in other folders)
