name: DazzleEditor
version: 0.1
cabal-version: >= 1.2
build-type: Custom
license: AllRightsReserved
copyright: (c) 2007 Martijn Schrage
author: Martijn Schrage
maintainer: martijn@cs.uu.nl
stability: experimental
homepage: http://www.cs.uu.nl/research/projects/proxima
package-url:
synopsis: Proxima is a generic presentation-oriented structure editor.
description:
category:
tested-with: GHC -any
data-files:
extra-source-files: ../proxima/src/Arrangement/ArrangerAG.ag
                    ../proxima/src/Layout/AlexTemplate-ghc
                    ../proxima/src/Layout/ScannerAG.ag src/DocumentType.prx
                    src/PresentationAG.ag src/PresentationAG_Generated.ag
extra-tmp-files:


Flag server
  Description: Compile Proxima as a server application without Gtk2Hs
  Default:     False

-- NOTE: After changing this flag, use clean to make sure that dependent modules are recompiled.
-- Oddly enough, the -cpp option scans all sources but does not trigger this recompilation.
-- (maybe a ghc bug?)

Executable DazzleEditor
  build-depends: base -any, haskell98 -any,
                 network >=2.0, parsec >=2.0, time >=1.0, containers >=0.1,
                 array >=0.1, cairo >= 0.9, xhtml >=2.0, mtl >=1.1,
                 old-time -any
  if !flag(server)
    build-depends: gtk >=0.9.11
  else
    build-depends: HAppS-State >= 0.9.3, HAppS-Server >= 0.9.3
  main-is: Main.hs
  buildable: True
  cc-options:
  ld-options:
  frameworks:
  c-sources:
  extensions:
  extra-libraries:
  extra-lib-dirs: .
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs: ../uuagc/src/ ../proxima/src src
  ghc-prof-options:
  ghc-options: -w -fglasgow-exts
  if flag(Server)
    cpp-options: -DSERVER
  extensions: UndecidableInstances NoMonomorphismRestriction
  hugs-options:
  jhc-options:


