name: Generator
version: 0.1
cabal-version: -any
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, haskell98 -any
stability:
homepage:
package-url:
synopsis:
description:
category:
author:
tested-with:
data-files:
extra-source-files:
extra-tmp-files:
 
executable: Generator
main-is: Main.hs
buildable: True
cc-options:
ld-options:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src ..\uuagc\src
other-modules: Main GenCommon GenAG GenDocUtils GenEditable GenParser GenProxParser GenTypes
ghc-prof-options:
ghc-options: -fglasgow-exts
hugs-options:
nhc-options:
jhc-options: