name: Generator
version: 0.1
cabal-version: -any
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, haskell98 -any, parsec ==2.0
stability:
homepage:
package-url:
synopsis:
description:
category:
author:
tested-with:
data-files:
extra-source-files:
extra-tmp-files:
 
executable: Generator
main-is: Main.hs
buildable: True
cc-options:
ld-options:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src ../uuagc/src
other-modules: GenAG GenCommon GenDocUtils GenEditable GenParser
               GenProxParser GenTypes Gen_DocTypes Gen_DocUtils Main Parser
               TypesUtils
ghc-prof-options:
ghc-options: -fglasgow-exts
hugs-options:
nhc-options:
jhc-options: